--- a/src/components/sbb-title/sbb-title.scss
+++ b/src/components/sbb-title/sbb-title.scss
@@ -22,27 +22,29 @@
     @include scrollMarginBlockStart;
   }
 
-  &.sbb-title--level-1 {
+  // stylelint-disable plugin/stylelint-bem-namics
+  :host(:is([level='1']:not([visual-level]), [visual-level='1'])) & {
     @include title-1;
   }
 
-  &.sbb-title--level-2 {
+  :host(:is([level='2']:not([visual-level]), [visual-level='2'])) & {
     @include title-2;
   }
 
-  &.sbb-title--level-3 {
+  :host(:is([level='3']:not([visual-level]), [visual-level='3'])) & {
     @include title-3;
   }
 
-  &.sbb-title--level-4 {
+  :host(:is([level='4']:not([visual-level]), [visual-level='4'])) & {
     @include title-4;
   }
 
-  &.sbb-title--level-5 {
+  :host(:is([level='5']:not([visual-level]), [visual-level='5'])) & {
     @include title-5;
   }
 
-  &.sbb-title--level-6 {
+  :host(:is([level='6']:not([visual-level]), [visual-level='6'])) & {
     @include title-6;
   }
+  // stylelint-enable plugin/stylelint-bem-namics
 }
