--- a/src/components/sbb-icon/sbb-icon.scss
+++ b/src/components/sbb-icon/sbb-icon.scss
@@ -7,6 +7,7 @@
   line-height: 0;
   margin-inline: var(--sbb-icon-margin-inline);
   margin-block: var(--sbb-icon-margin-block);
+  -webkit-tap-highlight-color: transparent;
 }
 
 svg {
