refactor: improve sbb-menu events and positioning

--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -8,10 +8,6 @@
   --sbb-menu-position-y: 0;
   --sbb-menu-animation-duration: var(--sbb-animation-duration-6x);
   --sbb-menu-animation-easing: ease;
-
-  // 85vh is not an exact value but looks optimized for mobile view.
-  --sbb-menu-max-height: calc(85vh - var(--sbb-spacing-fixed-8x));
-  --sbb-menu-min-height: #{px-to-rem-build(120)};
   --sbb-menu-max-width: 100%;
   --sbb-menu-min-width: 100%;
   --sbb-menu-border-radius: var(--sbb-border-radius-4x);
@@ -72,8 +68,8 @@
 .sbb-menu {
   --sbb-menu-transform: translateY(100%);
 
-  max-height: var(--sbb-menu-max-height);
-  min-height: var(--sbb-menu-min-height);
+  // 90vh is not an exact value but looks optimized for mobile view.
+  max-height: calc(90vh - var(--sbb-spacing-fixed-8x));
   max-width: var(--sbb-menu-max-width);
   min-width: var(--sbb-menu-min-width);
   text-align: start;
@@ -112,21 +108,32 @@
     --sbb-menu-max-width: #{px-to-rem-build(320)};
     --sbb-menu-min-width: #{px-to-rem-build(180)};
 
-    top: var(--sbb-menu-position-y);
-    left: var(--sbb-menu-position-x);
+    top: 0;
+    left: 0;
     right: unset;
     bottom: unset;
+    max-height: fit-content;
     border-radius: var(--sbb-menu-border-radius);
+
+    &[open] {
+      top: var(--sbb-menu-position-y);
+      left: var(--sbb-menu-position-x);
+      max-height: max(120px, var(--sbb-menu-max-height));
+
+      .sbb-menu__content {
+        max-height: max(120px, var(--sbb-menu-max-height));
+      }
+    }
   }
 }
 
 .sbb-menu__content {
   @include scrollbar-dark;
 
-  outline: none;
-  max-height: var(--sbb-menu-max-height);
+  max-height: calc(90vh - var(--sbb-spacing-fixed-8x));
   padding-block: var(--sbb-spacing-fixed-1x);
   overflow: auto;
+  outline: none;
 
   // Margin bottom in mobile variant
   &::after {
@@ -136,7 +143,7 @@
   }
 
   @include mq($from: medium) {
-    min-height: var(--sbb-menu-min-height);
+    max-height: fit-content;
 
     &::after {
       display: none;
