--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -18,6 +18,9 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 :host(:first-child) {
   margin-left: calc(var(--sbb-spacing-fixed-2x) * (-1));
+  @include mq($to: small) {
+    margin-left: calc(var(--sbb-spacing-fixed-3x) * (-1));
+  }
 }
 
 @each $breakpoint in $breakpoints {
@@ -70,6 +73,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   min-height: var(--sbb-header-action-min-height);
   min-width: var(--sbb-header-action-min-width);
   padding-inline: var(--sbb-header-action-padding-inline);
+  margin-inline: 0;
   border-radius: var(--sbb-border-radius-16x);
   transition-property: background-color;
   transition-duration: var(--sbb-animation-duration-6x);
