--- a/src/components/sbb-footer/sbb-footer.scss
+++ b/src/components/sbb-footer/sbb-footer.scss
@@ -3,80 +3,138 @@
 @include host-component-properties;
 
 :host {
-  --_footer-gap-horizontal: var(--footer-gap-horizontal, var(--sbb-grid-base-gutter-responsive));
-  --_footer-gap-vertical: var(--footer-gap-vertical, var(--sbb-spacing-responsive-l));
-  --_footer-background-color: var(--footer-background-color, var(--sbb-color-milk-default));
-  --_footer-divider-color: var(--footer-divider-color, var(--sbb-color-cloud-default));
-  --_footer-divider-thickness: var(--footer-divider-thickness, #{px-to-rem-build(1)});
-  --_footer-clock-width: var(--footer-clock-width, #{px-to-rem-build(76)});
-  @include mq($from: small) {
-    --_footer-clock-width: var(--footer-clock-width, #{px-to-rem-build(112)});
-  }
+  --sbb-page-base-offset-responsive: var(--sbb-layout-base-offset-responsive);
 
+  // TODO: Remove once sbb-stack is refactored
   // Contextual design for sbb-stack
   --stack-text-color-normal: var(--sbb-color-granite-default);
+  --sbb-footer-gap-horizontal: var(--sbb-grid-base-gutter-responsive);
+  --sbb-footer-gap-vertical: var(--sbb-spacing-responsive-l);
+  --sbb-footer-background-color: var(--sbb-color-milk-default);
+  --sbb-footer-clock-width: #{px-to-rem-build(76)};
+
+  @include mq($from: small) {
+    --sbb-footer-clock-width: #{px-to-rem-build(112)};
+  }
 }
 
-.footer {
-  @include page-spacing;
-
-  margin-block-start: var(--sbb-spacing-responsive-l);
-  padding-block-start: var(--sbb-spacing-responsive-l);
-  padding-block-end: var(--sbb-spacing-responsive-l);
-  background-color: var(--_footer-background-color);
+:host([negative]) {
+  --sbb-footer-background-color: var(--sbb-color-charcoal-default);
 }
 
-.footer--primary-negative {
-  --_footer-divider-color: var(--sbb-color-iron-default);
-  --_footer-background-color: var(--sbb-color-charcoal-default);
-  --sbb-title-text-color-normal-override: var(--sbb-color-storm-default);
+.sbb-footer {
+  padding-block: var(--sbb-spacing-responsive-l);
+  padding-inline: var(--sbb-layout-base-offset-responsive);
+  background-color: var(--sbb-footer-background-color);
 }
 
-.columns {
-  @include page-spacing__inner;
+.sbb-footer__title {
+  @include screenReaderOnly;
+}
 
+::slotted(.sbb-link-list-button-group) {
   display: flex;
-  flex-wrap: wrap;
-  column-gap: var(--_footer-gap-horizontal);
-  row-gap: var(--_footer-gap-vertical);
+  flex-direction: column;
+  gap: var(--sbb-spacing-fixed-6x);
+  align-items: flex-start;
+}
 
-  ::slotted([slot]) {
-    flex-basis: 100%;
+:host([variant='clock-columns']) {
+  // Content
+  slot {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    gap: var(--sbb-footer-gap-vertical) var(--sbb-footer-gap-horizontal);
 
     @include mq($from: small) {
-      flex: 0 0 calc(50% - (var(--_footer-gap-horizontal) / 2));
-      max-width: calc(50% - (var(--_footer-gap-horizontal) / 2));
+      grid-template-columns: calc(50% - (var(--sbb-footer-gap-horizontal) / 2));
     }
-    @include mq($from: wide) {
-      flex: 0 0 calc(25% - ((3 * var(--_footer-gap-horizontal)) / 4));
-      max-width: calc(25% - ((3 * var(--_footer-gap-horizontal)) / 4));
-    }
-  }
 
-  ::slotted([slot='clock']) {
-    max-width: var(--_footer-clock-width);
-    @include mq($from: zero) {
-      order: -1;
-    }
-    @include mq($from: small) {
-      order: initial;
-    }
     @include mq($from: wide) {
+      max-width: px-to-rem-build(1200); // TODO: Add as design token
       margin-inline-start: auto;
+      margin-inline-end: auto;
+      grid-template-columns: repeat(4, 1fr);
     }
   }
-}
 
-.bottom {
-  @include page-spacing__inner;
-}
+  ::slotted(sbb-clock) {
+    max-width: var(--sbb-footer-clock-width);
+    grid-row: 1;
 
-// Increase sbb-footer resilience
-//
-// Only apply spacing and thin line if footer bottom has a predecessor, excluding
-// the hidden title which always needs to be present
-:not(.title--visually-hidden) + .bottom {
-  margin-block-start: var(--sbb-spacing-responsive-xl);
-  border-block-start: var(--_footer-divider-thickness) solid var(--_footer-divider-color);
-  padding-block-start: var(--sbb-spacing-fixed-8x);
+    @include mq($from: small) {
+      align-self: start;
+      grid-row: 2;
+    }
+
+    @include mq($from: wide) {
+      grid-row: 1;
+      grid-column: 4 / 5;
+      width: 100%;
+      justify-self: start;
+    }
+  }
+
+  ::slotted(sbb-divider) {
+    --sbb-footer-inset-block-end: calc(
+      var(--sbb-footer-gap-vertical) - var(--sbb-spacing-responsive-s)
+    );
+
+    position: relative;
+    margin-block-start: calc(
+      var(--sbb-spacing-responsive-xl) -
+        (var(--sbb-footer-gap-vertical) + var(--sbb-footer-inset-block-end))
+    );
+    inset-block-end: calc(-1 * var(--sbb-footer-inset-block-end));
+
+    @include mq($from: small) {
+      grid-row: 3;
+      grid-column: 1 / 4;
+      width: 100%;
+    }
+
+    @include mq($from: wide) {
+      grid-row: 2;
+    }
+  }
+
+  @include mq($from: small) {
+    /* stylelint-disable-next-line plugin/stylelint-bem-namics */
+    ::slotted(:nth-child(-n + 2)) {
+      grid-row: 1;
+    }
+
+    /* stylelint-disable-next-line plugin/stylelint-bem-namics */
+    ::slotted(:nth-child(3)),
+    ::slotted(:nth-child(4)) {
+      grid-row: 2;
+    }
+
+    ::slotted(*:last-child) {
+      grid-row: 4;
+    }
+  }
+
+  @include mq($from: large) {
+    ::slotted(*:last-child) {
+      grid-column: 1 / 4;
+    }
+  }
+
+  @include mq($from: wide) {
+    /* stylelint-disable-next-line plugin/stylelint-bem-namics */
+    ::slotted(:nth-child(-n + 4)) {
+      grid-row: 1;
+    }
+
+    ::slotted(*:last-child) {
+      grid-row: 3;
+    }
+
+    ::slotted(sbb-divider),
+    ::slotted(*:last-child) {
+      grid-column: 1 / 5;
+    }
+  }
 }
