--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -39,8 +39,10 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   }
 }
 
-:host(:hover) {
-  --sbb-header-action-background-color: var(--sbb-color-milk-default);
+@include hover-mq($hover: true) {
+  :host(:hover) {
+    --sbb-header-action-background-color: var(--sbb-color-milk-default);
+  }
 }
 
 :host(:active) {
