--- a/src/components/sbb-dialog/sbb-dialog.scss
+++ b/src/components/sbb-dialog/sbb-dialog.scss
@@ -14,7 +14,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium';
   --sbb-dialog-max-width: 100%;
   --sbb-dialog-max-height: 100%;
   --sbb-dialog-border-radius: var(--sbb-border-radius-8x);
-  --sbb-dialog-padding-block: var(--sbb-spacing-fixed-4x);
+  --sbb-dialog-padding-block: var(--sbb-spacing-responsive-s);
   --sbb-dialog-animation-duration: var(--sbb-animation-duration-6x);
   --sbb-dialog-animation-easing: ease;
   --sbb-dialog-backdrop-color: transparent;
@@ -191,7 +191,8 @@ $breakpoints: 'zero', 'micro', 'small', 'medium';
     position: fixed;
     width: 100%;
     background-color: transparent;
-    padding-inline: var(--sbb-spacing-fixed-6x);
+    padding-inline: var(--sbb-spacing-responsive-xs);
+    padding-block-start: var(--sbb-spacing-responsive-xs);
   }
 
   .sbb-dialog__content {
