--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -11,6 +11,10 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   --sbb-header-action-background-color: transparent;
   --sbb-header-action-min-height: var(--sbb-size-button-m-min-height);
   --sbb-header-action-min-width: var(--sbb-header-action-min-height);
+
+  // Variable is assigned to property from sbb-header if it is first element
+  // in header and needs left offset correction.
+  // Move it left by padding between button width and icon.
   --sbb-header-first-item-margin-inline-start: calc(
     -0.5 * (var(--sbb-header-action-min-width) - var(--sbb-size-icon-ui-small))
   );
@@ -18,19 +22,11 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   display: inline-block;
 }
 
-:host(:first-child) {
-  margin-inline-start: var(--sbb-header-first-item-margin-inline-start);
-}
-
 @each $breakpoint in $breakpoints {
   :host([expand-from='#{$breakpoint}']) {
     @include mq($from: $breakpoint) {
       --sbb-header-action-text-display: block;
       --sbb-header-action-padding-inline: var(--sbb-spacing-fixed-5x);
-    }
-  }
-  :host([expand-from='#{$breakpoint}']:first-child) {
-    @include mq($from: $breakpoint) {
       --sbb-header-first-item-margin-inline-start: calc(
         var(--sbb-header-action-padding-inline) * (-1)
       );
