--- a/src/components/sbb-timetable-row/sbb-timetable-row.scss
+++ b/src/components/sbb-timetable-row/sbb-timetable-row.scss
@@ -111,14 +111,7 @@ li {
 }
 
 .sbb-loading {
-  @include card-host-properties;
-  @include card;
-  @include card--m;
-  @include card--primary-negative;
-
-  border: 0;
-  width: 100%;
-  height: 100%;
+  pointer-events: none;
 }
 
 .sbb-loading__wrapper {
