Revert "feat: enhance timetable-row and pearl-chain"
This reverts commit 5479769f544e0fb3e58f1818c54da66bda7e4040.

--- a/src/components/sbb-pearl-chain-time/sbb-pearl-chain-time.scss
+++ b/src/components/sbb-pearl-chain-time/sbb-pearl-chain-time.scss
@@ -13,11 +13,11 @@
   align-items: center;
 }
 
-.sbb-pearl-chain__time-walktime--left {
+.sbb-pearl-chain__time-walktime:first-of-type {
   margin-inline-end: var(--sbb-spacing-fixed-2x);
 }
 
-.sbb-pearl-chain__time-walktime--right {
+.sbb-pearl-chain__time-walktime:last-of-type {
   margin-inline-start: var(--sbb-spacing-fixed-1x);
 }
 
