--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -12,8 +12,11 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   --sbb-header-action-min-height: var(--sbb-size-button-m-min-height);
   --sbb-header-action-min-width: var(--sbb-header-action-min-height);
 
-  // Variable is assigned to property from sbb-header if it is first element
-  // in header and needs left offset correction.
+  // The variable is assigned to the property in the sbb-header component if it is
+  // the first element in the header and needs left offset correction (see sbb-header.scss).
+  // To avoid duplicated css definitions, the value itself is assigned here in
+  // sbb-header-action instead of sbb-header.
+  //
   // Move it left by distance between button's left side and the start of the icon.
   // As result, the icon should be aligned with the left side of the page wrapper.
   --sbb-header-first-item-margin-inline-start: calc(
@@ -28,6 +31,9 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
     @include mq($from: $breakpoint) {
       --sbb-header-action-text-display: block;
       --sbb-header-action-padding-inline: var(--sbb-spacing-fixed-5x);
+
+      // If expanded, move it left by left padding.
+      // As result, the icon should be aligned with the left side of the page wrapper.
       --sbb-header-first-item-margin-inline-start: calc(
         -1 * var(--sbb-header-action-padding-inline)
       );
